sample/retrieveUnpackaged/objects/ECO_Region__c.object
<CustomObject>
    <description>The zones for the rollout of backlog sewers</description>
    <fields>
        <fullName>Backlog_Date__c</fullName>
        <description>The standard backlog connection date</description>
        <label>Backlog Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ECO_Date__c</fullName>
        <description>The ECO Date for connection</description>
        <label>ECO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <picklist>
            <controllingField>Suburb__c</controllingField>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT ( Suburb__c )  &amp; IF( NOT (ISBLANK( TEXT(Region_Code__c) ) || ISNULL ( TEXT(Region_Code__c) )),  &apos; &apos; &amp; TEXT ( Region_Code__c ) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region_Number__c</fullName>
        <label>Sub Region Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>Region__c  &amp;  IF( NOT (ISBLANK( Sub_Region_Number__c ) || ISNULL ( Sub_Region_Number__c )),  TEXT ( Sub_Region_Number__c ) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <picklist>
            <picklistValues>
                <fullName>Blairgowrie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorrento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Andrews</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ECO Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ECO_Date__c</columns>
        <columns>Backlog_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECO Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>